# utzipper

./: .gitignore  CMakeLists.txt  LICENSE  README.md  clickable.json  main.cpp  manifest.json.in  utzip-contenthub.json  utzip.apparmor  utzip.desktop.in
plugins/: CMakeLists.txt
plugins/ArchiveManager/: CMakeLists.txt  archiveitem.cpp  archiveitem.h  archivemanager.cpp  archivemanager.h  archivereader.cpp  archivereader.h  archivewriter.cpp  archivewriter.h  plugin.cpp  plugin.h  qmldir
plugins/ArchiveReader/: CMakeLists.txt  archivereader.cpp  archivereader.h  plugin.cpp  qmldir
po/: ar.po  cs.po  de.po  fr.po  nl.po  utzip.lduboeuf.pot
qml/: About.qml  ArchiveExplorer.qml  ArchiveWriter.qml  Main.qml  qml.qrc
src/: CMakeLists.txt  archivemanager.cpp  archivereader.cpp  main.cpp
src/qml/: About.qml  ArchiveExplorer.qml  ArchiveWriter.qml  Main.qml
